--- a/wow/register.html
+++ b/wow/register.html
@@ -7,7 +7,7 @@
 	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="wow.css">
 	<link href="https://fonts.googleapis.com/css?family=Maven+Pro|Poiret+One|Raleway|Roboto" rel="stylesheet">
-	<link rel="shortcut icon" type="image/png" href="images/logo2.png"/>
+   <link rel="shortcut icon" type="image/png" href="images/logo2.png"/>
 </head>
 
 <body>
@@ -162,8 +162,9 @@
                 </td>
               </tr>
           </table>
-        </form><br>
-         <button type="submit" class="btn btn-primary">Register</button>
+          <br/>
+          <button type="submit" onsubmit="location.href='Login.html';" class="btn btn-primary">Register</button>
+        </form>
     </div>
      
         
