--- a/wow/timeEntry.html
+++ b/wow/timeEntry.html
@@ -56,11 +56,12 @@
                             <option value = "3">09:00 pm - 10:00 pm</option>
                             </select>
                         </p>
-                </fieldset><br>
-            <button type="submit" class="btn btn-primary">Select</button>
+                </fieldset>
+            <!-- <button class="btn btn-primary" onclick="location.href='10001.html'">Back</button> -->
+            <button type="submit" onsubmit="location.href='itemList.html'" class="btn btn-primary">Select</button>
         </form>
 
-        </div>
+     </div>
 
 
      <footer>Copyright &copy; 2020</footer>
