fixed input box problem(jonathan)

--- a/wow/contact.html
+++ b/wow/contact.html
@@ -1,4 +1,5 @@
-﻿<!doctype html>
+﻿
+<!doctype html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -37,9 +38,9 @@
           <table id="contact-table">
                <tr>
                     <td>
-                         <img src="images/phone.png" style="width:40px; height:40px;" alt="phone">&nbsp;
+                         <img src="images/phone.png" style="width:40px; height:40px; margin-left: 450px;" alt="phone">&nbsp;
                          <a href="tel:917-123-4567">917-123-4567</a> <br><br>
-                         <img src="images/email.png" style="width:40px; height:40px;" alt="email">&nbsp;
+                         <img src="images/email.png" style="width:40px; height:40px; margin-left: 370px;" alt="email">&nbsp;
                          <a href="mailto:customercare@washonwheelsnyc.com">customercare@washonwheelsnyc.com</a>
                     </td>
                </tr>
@@ -51,15 +52,15 @@
           <form method="post" action="index.html">
                <div class="form-group">
                     <label for="fname">(*) First Name</label>
-                    <input type="text" class="form-control" id="fname" placeholder="Jae" pattern="[a-zA-Z]{1,}" title="Must have text only" required>
+                    <input class='center' type="text" class="form-control" id="fname" placeholder="First Name" pattern="[a-zA-Z]{1,}" title="Must have text only" required>
                </div>
                <div class="form-group">
                     <label for="lname">(*) Last Name</label>
-                    <input type="text" class="form-control" id="lname" placeholder="Choi" pattern="[a-zA-Z]{1,}" title="Must have text only" required>
+                    <input class='center' type="text" class="form-control" id="lname" placeholder="Last Name" pattern="[a-zA-Z]{1,}" title="Must have text only" required>
                </div>
                <div class="form-group">
                     <label for="email">(*) Email address</label>
-                    <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
+                    <input class='center' type="text" id="email" placeholder="name@example.com" required>
                </div>
                <div class="form-group">
                     <label for="message">(*) Message</label>
