--- a/wow/index.html
+++ b/wow/index.html
@@ -29,7 +29,7 @@
                     <a class="nav-link" href="contact.html">Contact Us</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="Login.html">Login</a>
+                  <a class="nav-link" href="Login.php">Login</a>
                </li>
          </ul>
      </div>
@@ -45,7 +45,7 @@
                          <div class="search-container">
                              <form onsubmit="location.href='' + document.getElementById('myInput').value + '.html'; return false;">
                                  <input type="text" placeholder="Enter a zipcode" id="myInput" name="search" pattern="[0-9]*" minlength="5" maxlength="5" title="Enter a valid number" required> &nbsp; &nbsp; 
-                                 <button type="submit"  class="btn btn primary">Find laundromat</button>
+                                 <button type="submit"  class="btn btn primary" >Find laundromat</button>
                              </form>
                         </div>
                     </td>
